--- a/src/Scss/App.scss
+++ b/src/Scss/App.scss
@@ -21,6 +21,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	
 }
 .main {
 	flex: 1;
@@ -129,16 +130,7 @@ body {
 		font-size: 1.2rem;
 	}
 }
-.footer {
-	display: flex;
-	justify-content: center;
-	border-top: 2px solid #ccc;
-	padding: 2rem 0 1.5rem;
-}
-.footer-text {
-	margin: 0;
-	padding: 0;
-}
+
 .account {
 	display: flex;
 	justify-content: space-between;
@@ -177,6 +169,9 @@ body {
 	color: $color_4;
 	font-weight: bold;
 	padding: 10px;
+	width: 200px;
+	margin: vb n 15px
+
 }
 .header {
 	color: $color_4;
