--- a/src/Scss/Components/Navbar.scss
+++ b/src/Scss/Components/Navbar.scss
@@ -1,3 +1,6 @@
+.nav{
+	background-color: #ffffff;
+}
 .main-nav {
 	display: flex;
 	justify-content: space-between;
@@ -25,4 +28,11 @@
 .main-nav-logo-image {
 	max-width: 100%;
 	width: 200px;
+}
+
+.nav-link{
+	color: #2c3e50
+}
+:hover.nav-link{
+	color: #42b983;
 }
