--- a/src/Scss/Components/Footer.scss
+++ b/src/Scss/Components/Footer.scss
@@ -4,6 +4,10 @@
 	justify-content: center;
 	border-top: 2px solid #ccc;
 	padding: 2rem 0 1.5rem;
+	
+    position: relative;
+    top: 52px;
+
 }
 
 .footer-text {
